# 7z-code

./: ReadArchiveFile.cpp
7zCryptographic/: CKP  CMakeLists.txt  CheckPassword.cpp  Crc32.h  Formats.h  ReadArchiveFile.cpp  ReadProperties.h  makefile  verification.cpp
7zCryptographic/draft/: 7z.cpp  7zTask.txt  7zVerify.cpp  7z_fmt_plug_func.cpp  ALG  jtr_sha256.h  makefile  opencl_sha.h  readFile.h  readiv  readiv.cpp  test.cpp  test.h  testReadFile.cpp
Handler/: Handler.sln
Handler/Debug/: Handler.ilk
Handler/Handler/: 7zIn.h  7zItem.h  CRC32.h  Comment.h  Defs.h  Handler.vcxproj  Handler.vcxproj.filters  MyBuffer.h  MyString.h  MyVector.h  ReadMain.cpp
Handler/Handler/Debug/: CL.read.1.tlog  CL.write.1.tlog  Handler.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  (+3 more)
MyLZMA/: MyLZMA.sln
MyLZMA/Debug/: MyLZMA.ilk  ReadAndCheck.ilk
MyLZMA/MyLZMA/: Main.cpp  MyLZMA.vcxproj  MyLZMA.vcxproj.filters  MyLzma.cpp  MyLzma.h
ReadAndCheck/: LzmaLib.lib  ReadAndCheck.sln  UpgradeLog.XML  UpgradeLog.htm
ReadAndCheck/Debug/: ReadAndCheck.ilk
ReadAndCheck/ReadAndCheck/: Defs.h  IDecl.h  IPassword.h  IProgress.h  IntToString.cpp  MyBuffer.h  MyLzma.cpp  MyLzma.h  MyString.cpp  MyTypes.h  MyWindows.h  NewHandler.h  PropID.h  ReadAndCheck.vcxproj  ReadAndCheck.vcxproj.filters  ReadProperties.h  StdInStream.cpp  StdInStream.h  StdOutStream.cpp  StdOutStream.h  StringConvert.cpp  StringConvert.h  UDecode.cpp  UTFConvert.cpp  Write2File.cpp  verification.cpp
TabAuto/: TabAuto.sln
TabAuto/Debug/: TabAuto.ilk
TabAuto/TabAuto/: TabAuto.vcxproj  main.cpp
(+24 files in other folders)
